--- a/index.html
+++ b/index.html
@@ -6,22 +6,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oswald:wght@200;300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,500;0,700;0,900;1,100;1,300;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+
     <title>Eat Healty</title>
 </head>
 
 <body>
     <section class="flex-container top-banner">
         <div class="half-width">
-            <h1>Skip The Diet,</h1>
+            <h1><span class="orange-color">Skip</span> The Diet,</h1>
             <h1>Just Eat Healty</h1>
             <h1>With Food Network</h1>
+            <p>Imagine you don't need a diet because we provide
+                healthy and delicious food for you!</p>
+            <br>
+            <a class="order-button" href="#">Order Food</a>
+        </div>
 
-            <div class="half-width">
-                <img src="model/first-section-mdoel.jpg">
-            </div>
+        <div class="half-width">
+            <img src="model/first-section-mdoel.jpg">
+        </div>
         </div>
     </section>
 
+    <section class="flex-container">
+
+
+
+
+    </section>
+
+    <section class="flex-container second-section">
+
+        <div class="half-width">
+
+            <img src="model/second-section-model.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum diam orci pretium a pharetra,
+                feugiat cursus. Dictumst risus, sem egestas odio cras adipiscing vulputate. Nisi, risus in suscipit non.
+                Non commodo volutpat, pharetra, vel.</p>
+            <br>
+            <a class="order-button" href="#">Contact Me</a>
+
+
+        </div>
+    </section>
+
+    <section class="flex-container">
+        <div class="half-width">
+
+
+        </div>
+        <div class="half-width">
+
+
+        </div>
+    </section>
 
 
 </body>
