--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oswald:wght@200;300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,500;0,700;0,900;1,100;1,300;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oswald:wght@200;300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,500;0,700;0,900;1,100;1,300;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+
 
     <title>Eat Healty</title>
 </head>
@@ -51,7 +57,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum diam orci pretium a pharetra,
                 feugiat cursus. Dictumst risus, sem egestas odio cras adipiscing vulputate. Nisi, risus in suscipit non.
                 Non commodo volutpat, pharetra, vel.</p>
-            <br>
+            <br> <br>
             <a class="order-button" href="#">Contact Me</a>
 
 
@@ -69,6 +75,35 @@
         </div>
     </section>
 
+    <section class="my-recipes">
+        <h2>My recipies</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s.</p>
+
+
+
+
+    </section>
+    <section class="food-container">
+
+        <div class="not-deploy box left-side">
+            <img src="food/food-one-left.jpg" alt="">
+            <h4>Recipie Title</h4>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s.</p>
+        </div>
+
+
+        <div class="not-deploy box right-side">
+            <img src="food/food-one-left.jpg" alt="">
+            <h4>Recipie Title</h4>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s.</p>
+        </div>
+
+
+
+    </section>
 
 </body>
 
