--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </section>
     <section class="food-container">
 
-        <div class="not-deploy box left-side">
+        <div class="not-deploy box left-side zero">
             <img src="food/food-one-left.jpg" alt="">
             <h4>Recipie Title</h4>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
@@ -94,7 +94,7 @@
         </div>
 
 
-        <div class="not-deploy box right-side">
+        <div class="not-deploy box right-side zero">
             <img src="food/food-one-left.jpg" alt="">
             <h4>Recipie Title</h4>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
